<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="32dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ssid_row"
        style="@style/PropertyRow">

        <TextView
            android:id="@+id/ssid_tv"
            android:text="@string/ssid"
            style="@style/Widget.Wifi.Property.Label" />

        <TextView
            android:id="@+id/ssid_value_tv"
            style="@style/Widget.Wifi.Property.Value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ip_row"
        style="@style/PropertyRow">

        <TextView
            android:id="@+id/ip_tv"
            android:text="@string/ip"
            style="@style/Widget.Wifi.Property.Label" />

        <TextView
            android:id="@+id/ip_value_tv"
            style="@style/Widget.Wifi.Property.Value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/frequency_row"
        style="@style/PropertyRow">

        <TextView
            android:id="@+id/frequency_tv"
            android:text="@string/frequency"
            style="@style/Widget.Wifi.Property.Label" />

        <TextView
            android:id="@+id/frequency_value_tv"
            style="@style/Widget.Wifi.Property.Value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linkspeed_row"
        style="@style/PropertyRow">

        <TextView
            android:id="@+id/linkspeed_tv"
            android:text="@string/linkspeed"
            style="@style/Widget.Wifi.Property.Label" />

        <TextView
            android:id="@+id/linkspeed_value_tv"
            style="@style/Widget.Wifi.Property.Value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/gateway_row"
        style="@style/PropertyRow">

        <TextView
            android:id="@+id/gateway_tv"
            android:text="@string/gateway"
            style="@style/Widget.Wifi.Property.Label" />

        <TextView
            android:id="@+id/gateway_value_tv"
            style="@style/Widget.Wifi.Property.Value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dns_row"
        style="@style/PropertyRow">

        <TextView
            android:id="@+id/dns_tv"
            android:text="@string/dns"
            style="@style/Widget.Wifi.Property.Label" />

        <TextView
            android:id="@+id/dns_value_tv"
            style="@style/Widget.Wifi.Property.Value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dhcp_row"
        style="@style/PropertyRow">

        <TextView
            android:id="@+id/dhcp_tv"
            android:text="@string/dhcp"
            style="@style/Widget.Wifi.Property.Label" />

        <TextView
            android:id="@+id/dhcp_value_tv"
            style="@style/Widget.Wifi.Property.Value" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/netmask_row"
        style="@style/PropertyRow">

        <TextView
            android:id="@+id/netmask_tv"
            android:text="@string/netmask"
            style="@style/Widget.Wifi.Property.Label" />

        <TextView
            android:id="@+id/netmask_value_tv"
            style="@style/Widget.Wifi.Property.Value" />
    </LinearLayout>

</LinearLayout>