<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_layout"
    style="@style/Widget.WiFiWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.WiFiWidget.AppWidgetContainer">

    <FrameLayout
        android:id="@+id/connection_dependent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/wifi_properties_layout"
            layout="@layout/widget_wifi_properties" />

        <LinearLayout
            android:id="@+id/no_connection_available_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wifi_status_tv"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/go_to_wifi_settings_tv"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"

                android:text="@string/go_to_wifi_settings"
                android:textSize="12sp" />
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/last_updated_tv"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"

            android:textSize="14sp"
            android:textStyle="italic"
            tools:ignore="RelativeOverlap" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="UselessLeaf" />

        <ImageButton
            android:id="@+id/refresh_button"

            android:layout_width="@dimen/size_widget_image_button_icon"
            android:layout_height="@dimen/size_widget_image_button_icon"
            android:layout_marginHorizontal="8dp"

            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/refresh_data"
            android:src="@drawable/ic_refresh_24" />

        <ImageButton
            android:id="@+id/settings_button"

            android:layout_width="@dimen/size_widget_image_button_icon"
            android:layout_height="@dimen/size_widget_image_button_icon"

            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/configure_widget"
            android:src="@drawable/ic_settings_24" />

    </LinearLayout>

</RelativeLayout>